overflow fixed now

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -17,4 +17,5 @@
 	white-space: nowrap; 	
 	overflow: hidden;	
 	text-overflow: ellipsis; 
+	width: 170px;
 }
